# airhobot

./: .gitignore  Cargo.toml  README.md  aliases.js  default.nix  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml
airhobot/: all.html  enum.PuckSpeed.html  fn.detect.html  index.html  sidebar-items.js
airhobot/config/: struct.Config.html  struct.Detector.html  struct.Driver.html  struct.Filter.html  struct.Roi.html  type.Cfg.html
airhobot/error/: enum.Error.html
airhobot/predict/: fn.predict.html
airhobot/prelude/: enum.Error.html  enum.MouseEvent.html  enum.Source.html  fn.asset_path.html  fn.predict.html  index.html  sidebar-items.js  struct.Config.html  struct.Detector.html  struct.Driver.html  struct.Filter.html  struct.Roi.html  struct.State.html  trait.FindContours.html  trait.InRange.html  trait.ToHSV.html  type.Cfg.html  type.MouseEvents.html  type.Result.html
airhobot/source/: enum.Source.html
airhobot/state/: struct.State.html
airhobot/utils/: fn.asset_path.html
airhobot_stepper_actor/: all.html  index.html
app/: Cargo.toml  airhobot.toml
app/examples/: move.rs
app/src/: config.rs  error.rs  lib.rs  predict.rs  puck.rs  source.rs  state.rs  utils.rs
core/: Cargo.toml
core/src/: err.rs  (+4 more)
cv/: Cargo.toml  README.md  all.html  enum.CVType.html  index.html  sidebar-items.js
simple_stepper_test/: all.html  index.html
stepper/: Cargo.toml  README.md  all.html  enum.Direction.html  index.html  sidebar-items.js  struct.DirectionPin.html  struct.EnablePin.html  struct.StepPin.html  struct.Stepper.html
(+131 files in other folders)
